--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 .hero{
     background-color: #464B9B;
     display: flex;
-    width:100%;
+/*     width:100%; */
     padding: 10px;
     justify-content: space-evenly;
 }
