--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@
 .section2{
     padding: 1rem;
     background: #F0F0F5;
-    width:100%;
+/*     width:100%; */
 
     /* border: 2px solid red; */
 }
