--- a/style.css
+++ b/style.css
@@ -129,8 +129,8 @@
    margin: 0 auto;
 }
 .sec3img img{
-    width: 380px;
-    height: 360px;
+    width: 15vw;
+    height: 12vh;
 }
 .title4{
     font-size: 30px;
