--- a/style.css
+++ b/style.css
@@ -129,8 +129,8 @@
    margin: 0 auto;
 }
 .sec3img img{
-    width: 15vw;
-    height: 12vh;
+    width: 100%;
+    height: 70%;
 }
 .title4{
     font-size: 30px;
